--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,12 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail\" \"npm run dev\" --names=server,queue,logs,vite"
+        ],
+        "pint": [
+            "@php ./vendor/bin/pint -v"
+        ],
+        "dry-pint":[
+            "@php ./vendor/bin/pint --test -v"
         ]
     },
     "extra": {
